syntax = "proto3";

package order;

option go_package = "github.com/sgrgug/ecommerce-ms";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
}

message Order {
    int64 id = 1;
    int64 user_id = 2;
    int64 product_id = 3;
    int64 quantity = 4;
    double price = 5;
    string status = 6;
}

message CreateOrderRequest {
    int64 user_id = 1;
    int64 product_id = 2;
    int64 quantity = 3;
    double price = 4;
}

message CreateOrderResponse {
    Order order = 1;
}

message GetOrderRequest {
    string id = 1;
}

message GetOrderResponse {
    Order order = 1;
}
